fix popover z-index, not popup

--- a/durandal02/css/themes/mocks.css
+++ b/durandal02/css/themes/mocks.css
@@ -184,7 +184,7 @@ input[type="color"],
     outline: none;
 }
 
-.popup {
+.popover {
     z-index: 1031;
 }
 
